@@ -66,7 +66,7 @@
         <!-- Tinkar Core Variables -->
         <tinkar-core.groupId>dev.ikm.tinkar</tinkar-core.groupId>
         <tinkar-composer.version>1.10.0</tinkar-composer.version>
-        <tinkar-core.version>1.126.0-kl-merge-SNAPSHOT</tinkar-core.version>
+        <tinkar-core.version>1.126.1-kl-merge-SNAPSHOT</tinkar-core.version>
 
         <!-- IKM Evrete Variables -->
         <ikm-evrete.groupId>org.evrete</ikm-evrete.groupId>
@@ -687,6 +687,7 @@
                     <release>${java.version}</release>
                     <compilerArgs>
                         <arg>-parameters</arg>
+                        <arg>--enable-preview</arg>
                     </compilerArgs>
                     <annotationProcessorPaths>
                         <annotationProcessorPath>
@@ -729,6 +730,7 @@
                                         <include>**/*ITestFX.java</include>
                                     </includes>
                                     <argLine>
+                                        --enable-preview
                                         ${commonTestFXArgs}
                                     </argLine>
                                     <forkCount>1</forkCount>
@@ -774,6 +776,7 @@
                                         <include>**/*UTestFX.java</include>
                                     </includes>
                                     <argLine>
+                                        --enable-preview
                                         ${commonTestFXArgs}
                                     </argLine>
                                 </configuration>
